# XUserBot-free

./: .replit  CODE_OF_CONDUCT  Copyright.md  Dockerfile  GenerateStringSession.py  Procfile  README.md  app.json  heroku.yml  logfile.txt  pyproject.toml  render.yaml  requirements.txt  teloid.py
userbot/: __init__.py  cmdhelp.py  events.py  language.py  main.py
userbot/asisstant/: events.py
userbot/asisstant/modules/: __init__.py  ping.py
userbot/helpers/: p.py
userbot/language/: AZ.teloidjson  DEFAULT.teloidjson  EN.teloidjson  IN.teloidjson  RU.teloidjson  TR.teloidjson
userbot/modules/: __helpme.py  __init__.py  __plugin.py  __teloid.py  admin.py  adminsudo.py  afk.py  all.py  auto.py  blacklist.py  cevir.py  chat.py  combot.py  createbot.py  degistir.py  dil.py  durum.py  emall.py  ezanvakti.py  filter.py  fontlar.py  goodbye.py  grupbilgisi.py  hbilgi.py  klon.py  liste.py  locks.py  logo.py  misc.py  notes.py  pmpermit.py  profile.py  purge.py  reverse.py  rose.py  saved.py  scrapers_bot.py  screencapture.py  sendmsg.py  song.py  (+15 more)
userbot/utils/: pip_install.py
