[tool.poetry]
name = "repl_nix_teloiduserbot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.3"
GitPython = "^3.1.31"
heroku3 = "^5.2.0"
pySmartDL = "^1.3.4"
sickrage = "^10.0.70"
python-dotenv = "^1.0.0"
Telethon = "^1.28.2"
bs4 = "^0.0.1"
pylast = "^5.1.0"
emoji = "^2.2.0"
requests = "^2.28.2"
numpy = "^1.24.2"
Pillow = "^9.5.0"
PyDrive = "^1.3.1"
pytz = "^2023.3"
chromedriver-autoinstaller = "^0.4.0"
SQLAlchemy = "^2.0.9"
Flask = "^2.2.3"
speedtest-cli = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
